--- a/package.json
+++ b/package.json
@@ -19,38 +19,40 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express-rate-limit": "^5.1.3",
     "intersection-observer": "^0.10.0",
-    "next": "^9.3.6",
+    "next": "^9.4.4",
     "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intersection-observer": "^8.26.2",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.1.1",
     "styled-theming": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-viewport": "^5.3.18",
-    "@storybook/react": "^5.3.18",
-    "@types/node": "^13.13.5",
-    "@types/react": "^16.9.34",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-viewport": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
     "babel-loader": "^8.1.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-react-app": "^9.1.2",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.2",
+    "lint-staged": "^10.2.7",
     "prettier": "^2.0.5",
     "standard-version": "^8.0.0",
     "tslint": "^6.1.2",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-react-hooks": "^2.2.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "husky": {
     "hooks": {
