--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-intersection-observer": "^8.26.2",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
