--- a/package.json
+++ b/package.json
@@ -7,64 +7,46 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "tslint": "tslint -p . -c tslint.json",
     "prettier": "prettier --write **/*.{ts,tsx,js,css,html}",
     "release": "standard-version",
     "release:push": "standard-version && git push --follow-tags origin master",
     "release:test": "standard-version --dry-run",
+    "lint-staged": "lint-staged",
     "analyze": "cross-env ANALYZE=true next build",
-    "storybook": "start-storybook -p 6006 -c .storybook"
+    "upgrade-latest": "npx npm-check -u",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express-rate-limit": "^5.1.3",
-    "intersection-observer": "^0.10.0",
-    "next": "^9.4.4",
-    "next-images": "^1.4.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "intersection-observer": "^0.12.0",
+    "next": "^12.1.5",
+    "next-images": "^1.8.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-feather": "^2.0.8",
-    "react-intersection-observer": "^8.26.2",
-    "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1",
+    "react-intersection-observer": "^9.0.0",
+    "react-spring": "^9.4.4",
+    "styled-components": "^5.3.5",
     "styled-theming": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-viewport": "^5.3.19",
-    "@storybook/react": "^5.3.19",
-    "@types/node": "^14.0.5",
-    "@types/react": "^16.9.35",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-inline-react-svg": "^1.1.1",
-    "babel-plugin-styled-components": "^1.10.7",
-    "babel-preset-react-app": "^9.1.2",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.7",
-    "prettier": "^2.0.5",
-    "standard-version": "^8.0.0",
-    "tslint": "^6.1.2",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-react-hooks": "^2.2.2",
-    "typescript": "^3.9.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-theming": "^2.2.5",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.4.0",
+    "prettier": "^2.6.2",
+    "standard-version": "^9.3.2",
+    "typescript": "^4.6.3"
   },
   "lint-staged": {
     "*.+(ts|tsx)": [
-      "prettier --write",
-      "tslint"
+      "prettier --write"
     ]
   }
 }
